# example-voting-app-aio

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  prod.requirements.txt  pyproject.toml  requirements.txt
locustfiles/: voting.py
migrations/: 0_init_script.sql
src/voting_app/: app.py  client.py
src/voting_app/templates/: index.html  result_response.html  vote_response.html
