[project]
name = "voting-app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Giang Ngo", email = "giangblackk@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0.post1",
    "asyncpg>=0.29.0",
    "Jinja2>=3.1.3",
    "websockets>=12.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "pre-commit>=3.6.0",
    "ruff>=0.2.0",
    "isort>=5.13.2",
]
test = [
    "pytest>=8.0.1",
]
